[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Helpers/Interacts/InteractPromptArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/InventoryItems/ItemBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="DetachedItemBase" type="Node2D"]
script = ExtResource( 2 )

[node name="InteractPromptArea" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractPromptArea"]
position = Vector2( 10.0204, 9.98553 )
shape = SubResource( 1 )

[node name="ItemContainer" type="CenterContainer" parent="."]
margin_top = -0.10511
margin_right = 20.0
margin_bottom = 19.8949
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="interactable_text_signal" from="InteractPromptArea" to="." method="_on_InteractPromptArea_interactable_text_signal"]
